--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,7 @@
     <string name="rechercherClient">Rechercher client</string>
     <string name="rechercherFournisseur">Rechercher fournisseur</string>
     <string name="creer">"Créer"</string>
+    <string name="deconnexion">"Deconnexion"</string>
+    <string name="changerPassword">"Changer votre mot de passe"</string>
 
 </resources>
